--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "react-chips": "^0.8.0",
     "react-star-ratings": "^2.3.0",
     "webpack": "^4.25.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-obfuscator": "^0.18.0"
+    "webpack-cli": "^3.1.2"
   }
 }
