--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "crypto": "^1.0.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "jstat": "^1.7.1",
     "material-ui": "^0.20.2",
     "mongoose": "^5.3.15",
     "morgan": "^1.9.1",
