--- a/package.json
+++ b/package.json
@@ -20,20 +20,23 @@
   },
   "homepage": "https://github.com/albertosml/BookRecommender#readme",
   "dependencies": {
+    "bayes": "0.0.7",
     "crypto": "^1.0.1",
+    "csv-parser": "^2.2.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
-    "jstat": "^1.7.1",
-    "material-ui": "^0.20.2",
     "mongoose": "^5.3.15",
     "morgan": "^1.9.1",
     "node-fetch": "^2.3.0",
     "nodemailer": "^5.1.1",
     "react": "^16.7.0",
+    "react-chips": "^0.8.0",
     "react-dom": "^16.7.0",
     "react-google-charts": "^3.0.10",
     "react-js-pagination": "^3.0.2",
-    "react-tooltip": "^3.9.2"
+    "react-star-ratings": "^2.3.0",
+    "react-tooltip": "^3.9.2",
+    "solr-node": "^1.1.3"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -41,8 +44,6 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "nodemon": "^1.18.6",
-    "react-chips": "^0.8.0",
-    "react-star-ratings": "^2.3.0",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2"
   }
