--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^5.3.15",
     "morgan": "^1.9.1",
     "node-fetch": "^2.3.0",
+    "node-schedule": "^1.3.2",
     "nodemailer": "^5.1.1",
     "react": "^16.7.0",
     "react-chips": "^0.8.0",
