--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "csv-parser": "^2.2.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "forever": "^1.0.0",
     "mongoose": "^5.3.15",
     "morgan": "^1.9.1",
     "node-fetch": "^2.3.0",
